Added textstroke styling to past projects archive

--- a/projectarchive.html
+++ b/projectarchive.html
@@ -34,12 +34,12 @@
             <section id="pastArchive" class="main style3 dark">
 				<div class="content">
 					<header>
-						<h2 class="textShadow">Past Archive</h2>
+						<h2 class="textStroke">Past Archive</h2>
 						<!-- <p class="bold"></p> -->
 					</header>
 
                     <!-- Past Archive Gallery #1 -->
-                    <h2 class="projectArchiveTitles textShadow center">Nike Design Summit</h2>
+                    <h2 class="projectArchiveTitles textStroke center">Nike Design Summit</h2>
                         <div class="gallery">
                             <article class="from-left">
                                 <a href="images/fulls/4-Nike-Design-Summit/01-Overview Plan.jpg" class="image fit"><img src="images/thumbs/Nike-thumbs/01-Overview Plan_tn.jpg" title="" alt=""/></a>
