--- a/projectarchive.html
+++ b/projectarchive.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="_" />
 		<meta name="title" property="og:title" content="3POINT DESIGN" />
 		<meta property="og:type" content="Website" />
-		<meta name="image" property="og:image" content="https://media1.giphy.com/media/9veaR1BLlkRBKpXsfG/giphy.gif" />
+		<meta name="image" property="og:image" content="3POINT-DESIGN-screenshot.png" />
 		<meta name="description" property="og:description" content="Client Site" /><meta name="author" content="Jeremy Seckinger" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
