--- a/projectarchive.html
+++ b/projectarchive.html
@@ -4,11 +4,12 @@
 	<head>
 		<title>3pointdesign professional lighting design</title>
 		<meta charset="utf-8" />
-		<meta name="description" content="_" />
+		<meta name="description" content="Professional Concert Lighting Design Company" />
+		<meta name="keywords" content="lighting, lighting design, concert lighting, lighting production, production, concert production, event production">
 		<meta name="title" property="og:title" content="3POINT DESIGN" />
 		<meta property="og:type" content="Website" />
 		<meta name="image" property="og:image" content="3POINT-DESIGN-screenshot.png" />
-		<meta name="description" property="og:description" content="Client Site" /><meta name="author" content="Jeremy Seckinger" />
+		<meta name="description" property="og:description" content="we are a professional concert lighting design company available for hire" /><meta name="author" content="Jeremy Seckinger" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css"/></noscript>
