--- a/projectarchive.html
+++ b/projectarchive.html
@@ -9,7 +9,7 @@
 		<meta name="title" property="og:title" content="3POINT DESIGN" />
 		<meta property="og:type" content="Website" />
 		<meta name="image" property="og:image" content="3POINT-DESIGN-screenshot.png" />
-		<meta name="description" property="og:description" content="we are a professional concert lighting design company available for hire" /><meta name="author" content="Jeremy Seckinger" />
+		<meta name="description" property="og:description" content="we are an experienced professional concert lighting design company available for hire" /><meta name="author" content="Jeremy Seckinger" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css"/></noscript>
