--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<html lang="en">
 <html>
 	<head>
 		<title>3pointdesign professional lighting design website</title>
@@ -10,7 +11,7 @@
 		<meta name="image" property="og:image" content="3POINT-DESIGN-screenshot.png" />
 		<meta name="description" property="og:description" content="we are an experienced professional concert lighting design company available for hire" /><meta name="author" content="Jeremy Seckinger" />
 		<meta name="google-site-verification" content="W0RnPVVQLrkoKWHw_dptuUqLfhSJhjT8jGq1bw-mwfI" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css"/></noscript>
 	</head>
