--- a/projectarchive.html
+++ b/projectarchive.html
@@ -81,14 +81,14 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="https://www.instagram.com/samichaels/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.facebook.com/spencer.michaels.1/" target="_blank" class="icon brands fa-facebook"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.instagram.com/samichaels/" target="_blank" class="icon brands fa-instagram" rel="noopener"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/spencer.michaels.1/" target="_blank" class="icon brands fa-facebook" rel="noopener"><span class="label">LinkedIn</span></a></li>
 					</ul>
 
 				<!-- Menu -->
 					<ul class="menu footerli">
-						<li>&copy; Website by <a href="https://jeremyseckinger.netlify.app/" target="_blank">Jeremy Seckinger</a></li>
-						<li> Photography by <a href="https://www.alivecoverage.com/" target="_blank">Alive Coverage</a>
+						<li>&copy; Website by <a href="https://jeremyseckinger.netlify.app/" target="_blank" rel="noopener">Jeremy Seckinger</a></li>
+						<li> Photography by <a href="https://www.alivecoverage.com/" target="_blank" rel="noopener">Alive Coverage</a>
 					</ul>
 
 			</footer>
