--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="https://www.instagram.com/samichaels/" target="_blank" class="icon brands fa-instagram" rel="noopener"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.facebook.com/spencer.michaels.1/" target="_blank" class="icon brands fa-facebook" rel="noopener"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.instagram.com/samichaels/" aria-label="Spencer Michaels Instagram"target="_blank" class="icon brands fa-instagram" rel="noopener"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/spencer.michaels.1/" aria-label=" Spencer Michaels Facebook" target="_blank" class="icon brands fa-facebook" rel="noopener"><span class="label">LinkedIn</span></a></li>
 					</ul>
 
 				<!-- Menu -->
