--- a/projectarchive.html
+++ b/projectarchive.html
@@ -81,8 +81,8 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="https://www.instagram.com/samichaels/" target="_blank" class="icon brands fa-instagram" rel="noopener"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.facebook.com/spencer.michaels.1/" target="_blank" class="icon brands fa-facebook" rel="noopener"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.instagram.com/samichaels/" target="_blank" aria-label="Spencer Michaels Instagram" class="icon brands fa-instagram" rel="noopener"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/spencer.michaels.1/" target="_blank" aria-label="Spencer Michaels Facebook" class="icon brands fa-facebook" rel="noopener"><span class="label">LinkedIn</span></a></li>
 					</ul>
 
 				<!-- Menu -->
