Changed OG image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="keywords" content="lighting, lighting design, concert lighting, lighting production, production, concert production, event production">
 		<meta name="title" property="og:title" content="3POINT DESIGN" />
 		<meta property="og:type" content="Website" />
-		<meta name="image" property="og:image" content="3POINT-DESIGN-screenshot.png" />
+		<meta name="image" property="og:image" content="https://i.imgur.com/Z9yhr1N.jpg" />
 		<meta name="description" property="og:description" content="we are an experienced professional concert lighting design company available for hire" /><meta name="author" content="Jeremy Seckinger" />
 		<meta name="google-site-verification" content="W0RnPVVQLrkoKWHw_dptuUqLfhSJhjT8jGq1bw-mwfI" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
