Added featured gallery from left/right transition, and associated media queries, updated jQuery with new class featuredGallery section transition with var off function too

--- a/index.html
+++ b/index.html
@@ -63,15 +63,19 @@
 					<header class="center">
 						<h2 class="textStroke">Featured</h2>
 					</header>
-					<div>
+					<div class="featuredGallery">
+						<article class="video from-left">
 						<video controls preload="metadata">
 							<source src="images/Videos/1 - Grex Mega Mash - HD 1080p.mp4#t=1" type="video/mp4">
 							Your browser does not support the video tag.
 						</video>
+						</article>
+						<article class="video from-right">
 						<video controls preload="metadata">
 							<source src="images/Videos/2 - So Humble - HD 1080p.mp4#t=1" type="video/mp4">
 							Your browser does not support the video tag.
 						</video>
+					</article>
 					</div>
 				</div>
 					<footer>
