--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
 
 				<!-- Icons -->
 					<ul class="icons">
+						<li><a href="https://www.youtube.com/channel/UChMIMDZhNNaodt_LLT4b74g" aria-label="3POINT DESIGN Youtube" target="_blank" class="icon brands fa-youtube" rel="noopener"><span class="label">Instagram</span></a></li>
 						<li><a href="https://www.instagram.com/samichaels/" aria-label="Spencer Michaels Instagram"target="_blank" class="icon brands fa-instagram" rel="noopener"><span class="label">Instagram</span></a></li>
 						<li><a href="https://www.facebook.com/spencer.michaels.1/" aria-label=" Spencer Michaels Facebook" target="_blank" class="icon brands fa-facebook" rel="noopener"><span class="label">LinkedIn</span></a></li>
 					</ul>
