Added white network background to past archive page

--- a/projectarchive.html
+++ b/projectarchive.html
@@ -38,9 +38,12 @@
 			</header>
 
         <!-- Past Archive -->
-            <section id="pastArchive" class="main style3 dark">
+            <section id="pastArchive" class="video-container">
+							<video autoplay muted loop id="project-archive-video">
+				<source src="images/Network-Fullscreen.mp4" type="video/mp4">
+			</video>
 				<div class="content">
-					<header>
+					<header class="center">
 						<h2 class="textStroke">Past Archive</h2>
 						<!-- <p class="bold"></p> -->
 					</header>
@@ -86,10 +89,12 @@
 					</ul>
 
 				<!-- Menu -->
+				<article>
 					<ul class="menu footerli">
 						<li>&copy; Website by <a href="https://jeremyseckinger.netlify.app/" target="_blank" rel="noopener">Jeremy Seckinger</a></li>
 						<li> Photography by <a href="https://www.alivecoverage.com/" target="_blank" rel="noopener">Alive Coverage</a>
 					</ul>
+				</article>
 
 			</footer>
 
