Reduced header and footer, intro page to white network vid, fixed nav buttons

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
 		<!-- Project Archive -->
-		<section class="video-container">
+		<section id="projectArchive" class="video-container">
 			<video autoplay muted loop id="project-archive-video">
 				<source src="images/Network-Fullscreen.mp4" type="video/mp4">
 			</video>
@@ -256,7 +256,7 @@
 		</section>
 
 		<!-- Services -->
-	<section class="video-container">
+	<section id="services" class="video-container">
 		<video autoplay muted loop id="backgroundVideo">
 			<source src="images/Black-13495.mp4" type="video/mp4">
 		</video>
@@ -278,7 +278,7 @@
 	</section>
 
 		<!-- About -->
-	<section class="video-container">
+	<section id="about" class="video-container">
 		<video autoplay muted loop id="backgroundVideo">
 			<source src="/images/Network-Fullscreen.mp4" type="video/mp4">
 		</video>
