Restyled mute and volume up buttons--switched around display of icons too, down arrow buttons given opaque gray background and gray border for visibility, added new class for contact box to reduce opacity for video background, added padding to pastArchive footer and reduced header padding

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<video autoplay muted loop id="featuredVideo">
 						<source src="images/Videos/1 - Grex Mega Mash - HD 1080p.mp4" type="video/mp4">
 					</video>
-					<button id="mute" value="muted"><i class="fas fa-volume-up"></i></button>
+					<button id="mute" class="mute-button" value="muted"><i class="fas fa-volume-up"></i></button>
 					<!-- <header class="center">
 						<h2 class="textStroke">Featured</h2>
 					</header>
@@ -306,7 +306,7 @@
 						<h2 class="textStroke">Say Hello.</h2>
 						<p class="bold textStroke">Get in touch to inquire about working with us</p>
 					</header>
-					<div class="box">
+					<div class="contact-box">
 						<form method="POST" data-netlify="true">
 							<div class="fields">
 								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
