Changed volume-up icon to volume-mute icon for initial state

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<video autoplay muted loop id="featuredVideo">
 						<source src="images/Videos/1 - Grex Mega Mash - HD 1080p.mp4" type="video/mp4">
 					</video>
-					<button id="mute" class="mute-button" value="muted"><i class="fas fa-volume-up"></i></button>
+					<button id="mute" class="mute-button" value="muted"><i class="fas fa-volume-mute"></i></button>
 					<!-- <header class="center">
 						<h2 class="textStroke">Featured</h2>
 					</header>
