Added jQuery scroll event to trigger change of fixed background image to dark in order to cover long sections without image stretch, added button.anchored.circle to make anchored section buttons rounded since sections aren't identifiable with fixed backgrounds

--- a/index.html
+++ b/index.html
@@ -251,15 +251,16 @@
 							</article>
 						</div>
 				</div>
-				<a href="#services" class="button style2 down anchored">Next</a>
+				<a href="#services" id="scrollChange" class="button style2 down anchored circle">Next</a>
 			</section>
 		</section>
 
 		<!-- Services -->
-	<section id="services" class="video-container">
-		<video autoplay muted loop id="backgroundVideo">
+	<section class="video-container">
+	<section id="services">
+		<!-- <video autoplay muted loop id="backgroundVideo">
 			<source src="images/Black-13495.mp4" type="video/mp4">
-		</video>
+		</video> -->
 		<section class="main style2 right dark fullscreen">
 
 			<div class="content box style2">
@@ -273,15 +274,15 @@
 				<h3>Operate - Live Shows</h3>
 				<p>The reason why we are all here. It’s our life blood and motivation. There is nothing more satisfying than seeing a project reach fruition. From envisioning a design to manifesting it into reality, operating our live shows brings us the greatest joy in life. We see all of our projects through the entire process and bring 6+ years of experience to the table.</p>
 			</div>
-			<a href="#about" class="button style2 down anchored">Next</a>
+			<a href="#about" class="button style2 down anchored circle">Next</a>
 		</section>
 	</section>
 
 		<!-- About -->
-	<section id="about" class="video-container">
-		<video autoplay muted loop id="backgroundVideo">
-			<source src="/images/Network-Fullscreen.mp4" type="video/mp4">
-		</video>
+	<section id="about" class="">
+		<!-- <video autoplay muted loop id="backgroundVideo">
+			<source src="/images/Black-13495.mp4" type="video/mp4">
+		</video> -->
 		<section id="" class="main style2 left dark fullscreen">
 			<div class="content box style2">
 				<header>
@@ -294,7 +295,7 @@
 			<a href="#contact" class="button style2 down anchored">Next</a>
 		</section>
 	</section>
-
+	</section>
 		<!-- Contact -->
 		<section class="video-container">
 			<video autoplay muted loop id="backgroundVideo">
