--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 	</section>
 
 		<!-- About -->
-	<section id="about" class="">
+	<section id="about" class="video-container">
 		<!-- <video autoplay muted loop id="backgroundVideo">
 			<source src="/images/Black-13495.mp4" type="video/mp4">
 		</video> -->
@@ -355,6 +355,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/fixed.js"></script>
 
 	</body>
 </html>
